Whilst I am thinking about excluding stuff from FindBugs - add some exceptions for the generated code with issues and fix the remaining issues in the same package
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1049572 13f79535-47bb-0310-9956-ffa450edef68